# ats-pdf-generator

./: .dockerignore  .gitignore  .markdownlint.jsonc  .markdownlintignore  .pre-commit-config.yaml  .pre-commit-shell-skip-help.txt  .rumdl.toml  .tool-versions  .trivyignore  .trivyignore.yaml  CHANGELOG.md  DEVELOPMENT.md  DOCKER_IMPROVEMENTS_SUMMARY.md  DOCKER_IMPROVEMENT_PLAN.md  ENHANCEMENT_SUMMARY.md  FINAL_SUMMARY.md  LICENSE  MIGRATION_GUIDE.md  PORTFOLIO.md  README.md  install.sh  justfile  mise.toml  package.json  pnpm-lock.yaml  pyproject.toml  test-github-signing.txt  test-signing.md  validation_report.md
.cursor/rules/: .gitignore  code-quality.mdc  commit-messages.mdc  development-workflow.mdc  justfile-standards.mdc  markdown-standards.mdc  mise-toml-standards.mdc  portfolio.mdc  python-standards.mdc  script-standards.mdc
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-enhanced.yml  ci.yml  release.yml
docker/: Dockerfile.alpine  Dockerfile.dev  Dockerfile.optimized  Dockerfile.optimized.new  Dockerfile.standard  docker-compose.optimized.yml  docker-compose.yml
docker/legacy/: Dockerfile.alpine
docs/: CI_PROCESS_DOCUMENTATION.md  DOCKER_DISTRIBUTION.md  REGISTRY_SETUP.md  ci-architecture.md  user-guide.md
docs/specs/: ats-safety-requirements.md
examples/: sample-cover-letter.md  sample-profile.md
scripts/: benchmark-security-tools.sh  build-all-images.sh  build-and-test-enhanced.sh  build-and-test.sh  build-dev-image.sh  check-all.sh  check-summary.sh  convert-pdf.sh  docker-manager.sh  extract-versions.sh  generate-dockerfiles.sh  publish-image.sh  publish.sh  quality-check.sh  setup-docker-auth.sh  setup-local-env.sh  test-docker-images.sh  validate-dockerfiles.sh
scripts/legacy/: build-and-test.sh
scripts/quality/: check-docker.sh  check-markdown.sh  check-python.sh  check-security.sh  check-shell.sh
scripts/utils/: ci.sh  common.sh  logging.sh
src/: ats_converter.py
src/ats_pdf_generator/: __init__.py  ats-document-converter.sh  ats_converter.py  reporter.py  validation_types.py  validator.py
src/ats_pdf_generator/validator/: __init__.py  contact_validator.py  validator.py
templates/: ats-cover-letter.css  ats-document.css  ats-profile.css  resume-markdown-template.md
tests/: __init__.py  test_contact_validator.py  test_converter.py  test_validator.py
tests/test_documents/: all_caps_sections.md  comprehensive_violations.md  creative_titles.md  emoji_contact.md  hidden_text.md  html_table_test.md  keyword_stuffing.md  non_standard_dates.md  obfuscated_contact.md  proper_contact.md  table_layout.md  unlabeled_contact.md
